--- a/sell.html
+++ b/sell.html
@@ -53,10 +53,7 @@
       <a class="py-2 d-none d-md-inline-block mt-1" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block mt-1" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block mt-1" href="cart.html">Mi carrito</a>
-      <div id="loggedInDiv" class="d-none d-md-inline-block bg-light rounded-pill border border-primary my-2">
-        <span id="loggedInUser" class="pl-3 pr-1 font-weight-bold align-middle"></span>
-        <button onclick="onSignOut()" class="btn btn-primary py-0 rounded-pill">Salir</button>
-      </div>
+      <div id="logInDiv"></div>
     </div>
   </nav>
   <div class="container">
