--- a/category-info.html
+++ b/category-info.html
@@ -28,14 +28,33 @@
 </head>
 
 <body>
-  <nav class="site-header sticky-top py-1 bg-dark">
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block mt-1" href="cover.html">Inicio</a>
-      <a class="py-2 d-none d-md-inline-block mt-1" href="categories.html">Categorías</a>
-      <a class="py-2 d-none d-md-inline-block mt-1" href="products.html">Productos</a>
-      <a class="py-2 d-none d-md-inline-block mt-1" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block mt-1" href="cart.html">Mi carrito</a>
-      <div id="logInDiv"></div>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6d0757;">
+    <div class="navbar-brand ml-2" href="#">
+      <img src="img/brand 1.png" height="42" class="mx-1">
+      <img src="img/brand.png" height="28" class="mx-1">
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav w-100 d-flex text-center">
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="cover.html">Inicio</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="categories.html">Categorías</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="products.html">Productos</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="sell.html">Vender</a>
+        </li>
+        <li id="logInDiv" class="ml-lg-auto nav-item dropdown ">
+        </li>
+      </ul>
     </div>
   </nav>
   <main role="main">
