Arreglados algunos detalles estéticos y mejorado el sistema de login y signout

--- a/product-info.html
+++ b/product-info.html
@@ -53,7 +53,7 @@
         <li class="nav-item mx-3">
           <a class="nav-link" href="sell.html">Vender</a>
         </li>
-        <li id="logInDiv" class="ml-lg-auto nav-item dropdown ">
+        <li id="logInDiv" class="mr-4 ml-lg-auto nav-item dropdown ">
         </li>
       </ul>
     </div>
@@ -74,8 +74,8 @@
           <!-- The comments -->
           <div id="productComments" class="row px-4 my-3"></div>
           <!-- Here you can write a new comment -->
-          <div id="writeComment" class="row d-none w-100 mb-4 px-5">
-            <div class="form-group p-4 border rounded shadow-sm bg-light">
+          <div id="writeComment" class="row d-none px-4 px-lg-5 mb-4">
+            <div class="form-group p-4 w-100 border rounded shadow-sm bg-light">
               <h5 class="mb-4">Nos gusta escucharte, dános tu opinion</h5>
               <div class="form-inline">
                 <div class="input-group">
@@ -99,7 +99,7 @@
         </div>
 
         <!--Here is the related products-->
-        <div class="col-12 col-lg-3 text-center">
+        <div class="col-12 col-lg-3 px-0 px-lg-2 text-center">
           <div class="p-3 my-3 border shadow-sm rounded">
             <h4 class="font-weight-bold">Productos relacionados</h4>
 
