--- a/cart.html
+++ b/cart.html
@@ -58,7 +58,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav w-100 d-flex text-center">
-        <li class="nav-item active mx-3">
+        <li class="nav-item mx-3">
           <a class="nav-link" href="cover.html">Inicio</a>
         </li>
         <li class="nav-item mx-3">
@@ -70,7 +70,7 @@
         <li class="nav-item mx-3">
           <a class="nav-link" href="sell.html">Vender</a>
         </li>
-        <li id="logInDiv" class="ml-lg-auto nav-item dropdown ">
+        <li id="logInDiv" class="mr-4 ml-lg-auto nav-item dropdown ">
         </li>
       </ul>
     </div>
