--- a/categories.html
+++ b/categories.html
@@ -53,7 +53,7 @@
         <li class="nav-item mx-3">
           <a class="nav-link" href="sell.html">Vender</a>
         </li>
-        <li id="logInDiv" class="ml-lg-auto nav-item dropdown ">
+        <li id="logInDiv" class="mr-4 ml-lg-auto nav-item dropdown ">
         </li>
       </ul>
     </div>
@@ -79,28 +79,50 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-end">
-        <div class="col-md-6"></div>
-        <div class="col-md-6 col-sm-12 my-2 container">
-          <div class="row container p-0 m-0">
+      <div class="row my-2">
+        <div class="col-12 col-lg-6"></div>
+        <div class="col-12 col-lg-6">
+          <div class="d-flex row justify-content-end">
             <div class="col">
-              <p class="font-weight-normal text-right my-2">Cant.</p>
+              <p class="text-right">Cant.</p>
             </div>
             <div class="col">
-              <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+              <input class="form-control" type="number" placeholder="min." min="0" id="rangeFilterCountMin">
             </div>
             <div class="col">
-              <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+              <input class="form-control" type="number" placeholder="máx." min="0" id="rangeFilterCountMax">
             </div>
-            <div class="col-3 p-0">
-              <div class="btn-group" role="group">
-                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
-                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
-              </div>
+            <div class="col-4 btn-group px-0" role="group">
+              <button class="btn btn-light px-2" id="rangeFilterCount">Filtrar</button>
+              <button class="btn btn-link px-2" id="clearRangeFilter">Limpiar</button>
             </div>
           </div>
         </div>
       </div>
+      <!--
+        <div class="row justify-content-end">
+              <div class="col-md-6"></div>
+                <div class="col-md-6 col-sm-12 mb-1 container">
+                  <div class="row container p-0 m-0">
+                    <div class="col">
+                      <p class="font-weight-normal text-right my-2">Cant.</p>
+                    </div>
+                    <div class="col">
+                      <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+                    </div>
+                    <div class="col">
+                      <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+                    </div>
+                    <div class="col-3 p-0">
+                      <div class="btn-group" role="group">
+                        <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                        <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+      -->
       <div class="row">
         <div class="list-group shadow" id="cat-list-container">
         </div>
