--- a/cover.html
+++ b/cover.html
@@ -53,7 +53,7 @@
         <li class="nav-item mx-3">
           <a class="nav-link" href="sell.html">Vender</a>
         </li>
-        <li id="logInDiv" class="ml-lg-auto nav-item dropdown ">
+        <li id="logInDiv" class="mr-4 ml-lg-auto nav-item dropdown ">
         </li>
       </ul>
     </div>
