--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     body {
       padding-top: 40px;
       padding-bottom: 40px;
-      background: url("img/Green\ background.jpg") no-repeat center center fixed;
+      background: url("img/Login_background.jpg") no-repeat center center fixed;
       background-size: cover;
     }
 
