--- a/sell.html
+++ b/sell.html
@@ -70,7 +70,7 @@
         <li class="nav-item mx-3 active">
           <a class="nav-link" href="sell.html">Vender</a>
         </li>
-        <li id="logInDiv" class="mr-4 ml-lg-auto nav-item dropdown ">
+        <li id="logInDiv" class="mr-lg-4 ml-lg-auto nav-item dropdown">
         </li>
       </ul>
     </div>
