--- a/cart.html
+++ b/cart.html
@@ -88,27 +88,30 @@
           <div id="cartArticles" class="col-12 col-lg-8 py-3 pr-4 border rounded shadow-sm mr-lg-4"></div>
 
           <!-- Subtotal and total price -->
-          <div class="col border rounded shadow p-4">
+          <div class="col border rounded shadow p-4 my-3 my-lg-0">
             <div class="row p-2">
               <!-- Button for selecting shipping method -->
               <button type="button" class="btn btn-primary w-100 my-2" data-toggle="modal"
-                data-target="#shippingSelectModal">
+                data-target="#shippingTypeModal">
                 Opciones de envío
               </button>
               <!-- Here is the shipping info -->
               <div id="shippingInfo" class="m-2 w-100 border rounded shadow-sm"></div>
             </div>
+            <!--Subtotal-->
             <div class="row align-items-center px-2">
-              <h6 class="col-5">Subtotal:</h6>
+              <h6 class="col-4">Subtotal:</h6>
               <h3 id="subtotal" class="col font-weight-bold text-right"></h3>
             </div>
+            <!--Shipping cost-->
             <div class="row align-items-center px-2">
-              <h6 class="col-5">Costo de envío (<span id="shippingPriceInfo" class="text-pink">-</span>):</h6>
+              <h6 class="col-4">Costo de envío (<span id="shippingPriceInfo" class="text-pink">-</span>):</h6>
               <h3 id="shippingPrice" class="col font-weight-bold text-right">-</h3>
             </div>
             <hr>
+            <!--Total-->
             <div class="row align-items-end px-2">
-              <h5 class="col-5">Total:</h5>
+              <h5 class="col-4">Total:</h5>
               <h2 id="total" class="col font-weight-bold text-right">-</h2>
             </div>
             <div class="row p-2 align-self-end">
@@ -129,7 +132,7 @@
     </div>
 
     <!-- Modal shipping-->
-    <div class="modal fade" id="shippingSelectModal" tabindex="-1" role="dialog"
+    <div class="modal fade" id="shippingTypeModal" tabindex="-1" role="dialog"
       aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -140,44 +143,71 @@
             </button>
           </div>
           <div class="modal-body">
-            <div class="form-group d-flex row w-100 px-3 align-items-center">
-              <label for="shippingAddressStreet" class="col-3 mb-0">Calle: </label>
-              <input type="text" name="shippingAddressStreet" id="shippingAddressStreet" class="col form-control">
-            </div>
-            <div class="form-group d-flex row w-100 px-3 align-items-center">
-              <label for="shippingAddressNumber" class="col-3 mb-0">Número: </label>
-              <input type="text" name="shippingAddressNumber" id="shippingAddressNumber" class="col form-control">
-            </div>
-            <div class="form-group d-flex row w-100 px-3 align-items-center">
-              <label for="shippingAddressCorner" class="col-3 mb-0">Esquina: </label>
-              <input type="text" name="shippingAddressCorner" id="shippingAddressCorner" class="col form-control">
-            </div>
 
-            <div class="form-group border rounded shadow-sm m-4 p-4">
-              <h4>Tipo de envío</h4>
-              <input type="radio" id="premium" name="shippingType" value="15">
-              <label for="premium" class="px-2" style="font-size: 1.3em;">
-                Premium (2-5 días) <span class="text-pink">+15%</span>
-              </label>
-              <br>
-              <input type="radio" id="express" name="shippingType" value="7">
-              <label for="express" class="px-2" style="font-size: 1.3em;">
-                Express (5-8 días) <span class="text-pink">+7%</span>
-              </label>
-              <br>
-              <input type="radio" id="standard" name="shippingType" value="5">
-              <label for="standard" class="px-2" style="font-size: 1.3em;">
-                Standard (12-15 días) <span class="text-pink">+5%</span>
-              </label>
-            </div>
-            <p id="shippingOptionsInfo"class="text-center text-danger"></p>
+            <form id="shippingTypeForm" class="needs-validation" novalidate>
+              <div class="form-group d-flex row w-100 px-3 align-items-center">
+                <label for="shippingAddressStreet" class="col-3 mb-0">Calle: </label>
+                <input type="text" name="shippingAddressStreet" id="shippingAddressStreet" class="col form-control"
+                  required>
+                <div class="invalid-feedback">
+                  Por favor, ingrese la calle.
+                </div>
+              </div>
+              <div class="form-group d-flex row w-100 px-3 align-items-center">
+                <label for="shippingAddressNumber" class="col-3 mb-0">Número: </label>
+                <input type="text" name="shippingAddressNumber" id="shippingAddressNumber" class="col form-control"
+                  required>
+                <div class="invalid-feedback">
+                  Por favor, ingrese el número de puerta.
+                </div>
+              </div>
+              <div class="form-group d-flex row w-100 px-3 align-items-center">
+                <label for="shippingAddressCorner" class="col-3 mb-0">Esquina: </label>
+                <input type="text" name="shippingAddressCorner" id="shippingAddressCorner" class="col form-control"
+                  required>
+                <div class="invalid-feedback">
+                  Por favor, ingrese la esquina cercana.
+                </div>
+              </div>
+              <div class="form-group d-flex row w-100 px-3 align-items-center">
+                <label for="shippingCountry" class="col-3 mb-0">País: </label>
+                <input type="text" name="shippingCountry" id="shippingCountry" class="col form-control" required>
+                <div class="invalid-feedback">
+                  Por favor, ingrese el país del envío.
+                </div>
+              </div>
+              <div class="form-group border rounded shadow-sm m-4 p-4">
+                <h4>Tipo de envío</h4>
+                <div class="custom-control custom-radio">
+                  <input type="radio" id="premium" name="shippingType" class="custom-control-input" value="15" required>
+                  <label for="premium" class="px-2 custom-control-label" style="font-size: 1.3em;">
+                    Premium (2-5 días) <span class="text-pink">+15%</span>
+                  </label>
+                </div>
+                <br>
+                <div class="custom-control custom-radio">
+                  <input type="radio" id="express" name="shippingType" class="custom-control-input" value="7">
+                  <label for="express" class="px-2 custom-control-label" style="font-size: 1.3em;">
+                    Express (5-8 días) <span class="text-pink">+7%</span>
+                  </label>
+                </div>
+                <br>
+                <div class="custom-control custom-radio">
+                  <input type="radio" id="standard" name="shippingType" class="custom-control-input" value="5">
+                  <label for="standard" class="px-2 custom-control-label" style="font-size: 1.3em;">
+                    Standard (12-15 días) <span class="text-pink">+5%</span>
+                  </label>
+                  <div class="invalid-feedback">
+                    Por favor, ingrese el tipo de envío.
+                  </div>
+                </div>
+              </div>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+              <input type="submit" class="btn btn-primary" value="Confirmar">
+            </form>
 
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-primary"
-              onclick="applyShippingType()">Confirmar</button>
-          </div>
+
         </div>
       </div>
     </div>
